--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -348,6 +348,14 @@
          in hardware. -->
     <bool name="config_setColorTransformAccelerated">true</bool>
 
+    <!-- Default files to pin via Pinner Service -->
+    <string-array translatable="false" name="config_defaultPinnerServiceFiles">
+       <item>"/system/framework/arm64/boot-framework.oat"</item>
+       <item>"/system/framework/oat/arm64/services.odex"</item>
+       <item>"/system/framework/arm64/boot.oat"</item>
+       <item>"/system/framework/arm64/boot-core-libart.oat"</item>
+    </string-array>
+
     <!-- Whether device has turbo power charging support -->
     <bool name="config_hasTurboPowerCharger">true</bool>
 
